// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OsTokenVaultEscrow claim exited assets succeeds succeeds for all osToken shares 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 77572,
}
`;

exports[`OsTokenVaultEscrow claim exited assets succeeds succeeds for partial osToken shares 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 87969,
}
`;

exports[`OsTokenVaultEscrow liquidate can liquidate 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 96837,
}
`;

exports[`OsTokenVaultEscrow process exited assets processes exited assets 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 64327,
}
`;

exports[`OsTokenVaultEscrow redeem can redeem 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 96176,
}
`;

exports[`OsTokenVaultEscrow register keeps LTV for the position left 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 172530,
}
`;

exports[`OsTokenVaultEscrow register removes position if all the osToken shares transferred 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 162351,
}
`;

exports[`OsTokenVaultEscrow set authenticator owner can update authenticator 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 30077,
}
`;

exports[`OsTokenVaultEscrow update config owner can update config 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 35657,
}
`;
